atualizaçoes de layout

--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Pagina De Blog</h1>
+    <p>Bem vindo a pagina de blog</p>
     <a href="index.html">voltar para a pagina inicial</a>
 </body>
 </html>
